test/types/range/unbounded/slices/sliceOutOfBounds.good
false
sliceOutOfBounds.chpl:5: error: halt reached - array slice out of bounds
note: slice index was 8.. but array bounds are 1..7
